--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/pluveto/upgit-vscode-extension"
   },
-  "publisher": "Zhang Zijing (Pluveto)",
+  "publisher": "pluveto",
   "keywords": [
     "upgit",
     "image",
